--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  border-top: 1px solid rgba(255, 255, 255, .08);
   font-size: 70%;
   padding-top: 1.8em;
   padding-bottom: 1em;
